// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with all props 1`] = `
<div>
  <header
    className="header"
  >
    <div
      className="brand"
    >
      <Link
        to="/"
      >
        <SvgrMock
          alt="layout:title"
          className="logo"
          height={85}
          width={183}
        />
      </Link>
      <span
        className="title"
      >
        layout:title
      </span>
    </div>
    <div
      className="navigation"
    >
      <WithProviderContextComponent
        align="baseline"
        justify="space-between"
      >
        <WithProviderContextComponent
          dense={true}
        >
          <WithProviderContextComponent>
            <ForwardRef(withForwardedRef(WithProviderContextComponent))
              clickHandler={[Function]}
              label="layout:menu.workLogs"
              priority="outline"
            />
          </WithProviderContextComponent>
          <WithProviderContextComponent>
            <ForwardRef(withForwardedRef(WithProviderContextComponent))
              clickHandler={[Function]}
              label="layout:menu.specialApprovals"
              priority="outline"
            />
          </WithProviderContextComponent>
          <WithProviderContextComponent>
            <ForwardRef(withForwardedRef(WithProviderContextComponent))
              clickHandler={[Function]}
              label="layout:menu.supervisedUsers"
              priority="outline"
            />
          </WithProviderContextComponent>
          <WithProviderContextComponent>
            <ForwardRef(withForwardedRef(WithProviderContextComponent))
              clickHandler={[Function]}
              label="layout:menu.users"
              priority="outline"
            />
          </WithProviderContextComponent>
          <WithProviderContextComponent>
            <ForwardRef(withForwardedRef(WithProviderContextComponent))
              clickHandler={[Function]}
              label="layout:menu.hrChangesAndAbsenceRegistration"
              priority="outline"
            />
          </WithProviderContextComponent>
          <WithProviderContextComponent>
            <ForwardRef(withForwardedRef(WithProviderContextComponent))
              clickHandler={[Function]}
              label="layout:menu.hrYearOverview"
              priority="outline"
            />
          </WithProviderContextComponent>
          <WithProviderContextComponent>
            <ForwardRef(withForwardedRef(WithProviderContextComponent))
              clickHandler={[Function]}
              label="layout:menu.settings"
              priority="outline"
            />
          </WithProviderContextComponent>
        </WithProviderContextComponent>
        <WithProviderContextComponent>
          <WithProviderContextComponent>
            <ForwardRef(withForwardedRef(WithProviderContextComponent))
              clickHandler={[Function]}
              label="Jan Novak"
              priority="link"
            />
          </WithProviderContextComponent>
          <WithProviderContextComponent>
            <ForwardRef(withForwardedRef(WithProviderContextComponent))
              clickHandler={[Function]}
              label="layout:menu.logout"
              priority="link"
            />
          </WithProviderContextComponent>
        </WithProviderContextComponent>
      </WithProviderContextComponent>
    </div>
  </header>
  <main
    className="main"
  >
    <div
      className="body"
    >
      <h1
        className="bodyTitle"
      >
        Title
      </h1>
      Content
    </div>
  </main>
  <footer
    className="footer"
  >
    <p>
      layout:title
    </p>
  </footer>
</div>
`;

exports[`rendering renders correctly with mandatory props only 1`] = `
<div>
  <main
    className="main"
  >
    <div
      className="body"
    >
      <h1
        className="bodyTitle"
      >
        Title
      </h1>
      Content
    </div>
  </main>
  <footer
    className="footer"
  >
    <p>
      layout:title
    </p>
  </footer>
</div>
`;
